--- a/filialsTest.html
+++ b/filialsTest.html
@@ -198,7 +198,7 @@
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="general" role="tabpanel"
                                 aria-labelledby="general-tab">
-                                <form action="#" id="generalForm" method="post" Content-Type="multipart/form-data">
+                                <form action="#" name="generalForm" id="generalForm" method="post" Content-Type="multipart/form-data">
                                     <div class="card">
                                         <div class="card-system">
                                             <h3 class="card-system__title">
@@ -225,46 +225,6 @@
                                                         aria-labelledby="headingOne" data-bs-parent="#timetable">
                                                         <div class="accordion-body">
                                                             <div class="timetable mb-3">
-                                                                <!-- Понедельник -->
-                                                                <!-- <div
-                                                                    class="input-group input-group-day input-group--monday">
-                                                                    <div class="checkbox-wrap">
-                                                                        <input name="checkbox"
-                                                                            class="form-check-input checkbox-time form-check-input--monday"
-                                                                            type="checkbox" value="" id="checkboxMonday"
-                                                                            checked>
-                                                                    </div>
-                                                                    <span class="span-day span-monday">
-                                                                        Понедельник
-                                                                    </span>
-                                                                    <label for="from">с</label>
-                                                                    <input name="from" type="time"
-                                                                        class="form-control form-control--startTime"
-                                                                        id="startTimeMonday"
-                                                                        aria-describedby="startTime">
-                                                                    <label for="to">по</label>
-                                                                    <input name="to" type="time"
-                                                                        class="form-control form-control--endTime"
-                                                                        id="endTimeMonday" aria-describedby="endTime">
-                                                                    <button type="button"
-                                                                        class="btn btn-primary btn-addTime btn-addTimeMonday">
-                                                                        <img src="./images/clock.svg" alt="clock">
-                                                                    </button>
-                                                                    <div class="addTime addTimeMonday">
-                                                                        <div class="input-group input-group-extraday">
-                                                                            <label for="from">с</label>
-                                                                            <input name="fromExtra" type="time"
-                                                                                class="form-control form-control--startTime"
-                                                                                id="startTimeMondayExtra"
-                                                                                aria-describedby="startTime">
-                                                                            <label for="to">по</label>
-                                                                            <input name="toExtra" type="time"
-                                                                                class="form-control form-control--endTime"
-                                                                                id="endTimeMondayExtra"
-                                                                                aria-describedby="endTime">
-                                                                        </div>
-                                                                    </div>
-                                                                </div> -->
                                                             </div>
                                                         </div>
                                                     </div>
